--- a/main.css
+++ b/main.css
@@ -25,12 +25,15 @@
 
 .camera {
   width: 340px;
+  background-color: aqua;
   display: inline-block;
+  position: relative;
 }
 
 .output {
   width: 340px;
   display: inline-block;
+  background-color: lightpink;
 }
 
 .vanished {
@@ -69,4 +72,10 @@
   font-size: 16px;
   font-family: "Lucida Grande", "Arial", sans-serif;
   width: 760px;
+}
+
+#videoguideline {
+  position: absolute;
+  top: 0px;
+  left: 0px;
 }
