--- a/main.css
+++ b/main.css
@@ -1,21 +1,5 @@
 #video {
-  border: 1px solid black;
-  box-shadow: 2px 2px 3px black;
   transform: scale(-1, 1);
-  /* width: 320px;
-  height: 240px; */
-}
-
-#photo {
-  border: 1px solid black;
-  box-shadow: 2px 2px 3px black;
-  /* width: 320px;
-  height: 240px; */
-}
-
-#result {
-  border: 1px solid black;
-  box-shadow: 2px 2px 3px black;
   /* width: 320px;
   height: 240px; */
 }
@@ -25,20 +9,20 @@
 }
 
 .camera {
-  width: 340px;
+  /* width: 340px; */
   background-color: aqua;
   display: inline-block;
   position: relative;
 }
 
 .output {
-  width: 340px;
+  /* width: 340px; */
   display: inline-block;
   background-color: lightpink;
 }
 
 .vanished {
-  width: 340px;
+  /* width: 340px; */
   display: inline-block;
 }
 
